oreilly-docker-java-shopping/kubernetes-ambassador/productcatalogue-service-canary.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogue-canary
  labels:
    app: productcatalogue-canary
spec:
  type: ClusterIP
  selector:
    app: productcatalogue-canary
  ports:
  - protocol: TCP
    port: 8020
    name: http
