oreilly-docker-java-shopping/kubernetes-ambassador/shopfront-service-canary-a.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shopfront-canary
  labels:
    app: shopfront-canary
spec:
  type: ClusterIP
  selector:
    app: shopfront-canary
  ports:
  - protocol: TCP
    port: 8010
    name: http

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shopfront-canary
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: shopfront-canary
    spec:
      containers:
      - name: djshopfront-canary
        image: rishabh050189/djshopfront:1.0.40
        ports:
        - containerPort: 8010
        livenessProbe:
          httpGet:
            path: /health
            port: 8010
          initialDelaySeconds: 30
          timeoutSeconds: 1
