oreilly-docker-java-shopping/kubernetes-ambassador/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: shopfront
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ambassador
          servicePort: 80
